--- a/src/.gitignore
+++ b/src/.gitignore
@@ -5,13 +5,7 @@
 *.err
 *.map
 
-# Intermediate data.
-data.cpp
-data.h
-gfx/*.h
-CC2_TMP
-
-# Not sure about this one since you have to build it manually.
+# Data.
 tracks.dat
 
 # Test build.
