--- a/disk/makefile
+++ b/disk/makefile
@@ -36,19 +36,19 @@ CC_FLAGS = -mfi -od -d3 -fpi -i$(MIDASINCS)
 # CC_FLAGS = -mfi -d3 -4r -ob -oe32 -oh -oi -ol+ -om -or -ot -fpi -i$(MIDASINCS)
 
 # Release compile (in order):
-# - Place constants in code segment.
-# - Flat memory model.
-# - No debug information.
-# - 486 register call profile.
-# - Enable branch prediction.
-# - Expand inline.
-# - Enable "expensive" optimizations.
-# - Expand intrinsics inline.
-# - Loop unrolling.
-# - Inline math.
-# - Reorder instructions.
-# - Favor execution time.
-# - Inline FPU intrinsics (where available, otherwise emulate).
+# - (zc) Place constants in code segment.
+# - (mfi) Flat memory model.
+# - (d0) No debug information.
+# - (4r) 486 register call profile.
+# - (ob) Enable branch prediction.
+# - (oe32) Expand inline.
+# - (oh) Enable "expensive" optimizations.
+# - (oi) Expand intrinsics inline.
+# - (ol+) Loop unrolling.
+# - (om) Inline math.
+# - (or) Reorder instructions.
+# - (ot) Favor execution time.
+# - (fpi) Inline FPU intrinsics (where available, otherwise emulate).
 CC_FLAGS = -zc -mfi -d0 -4r -ob -oe32 -oh -oi -ol+ -om -or -ot -fpi -i$(MIDASINCS)
 
 !endif
@@ -63,7 +63,7 @@ $(TARGET) : $(OBJLIST) $(MIDASLIB)
 main.obj : main.cpp tracks\tracks.h
 	$(CC) main.cpp $(CC_FLAGS)
 
-# Build Oberhumer's MiniLZO.
+# build MiniLZO (FIXME)
 minilzo\minilzo.obj : minilzo\minilzo.c
 	cd minilzo
 	wmake
@@ -75,5 +75,5 @@ clean : .symbolic
 
 # Pack using UPX (maximum compression).
 pack : .symbolic
-	upx -9 -v mdisk.exe
-	ren mdisk.exe cchop2.exe
+	upx -9 -v $(TARGET)
+	ren $(TARGET) cchop2.exe
