--- a/dosbox-0.74-linux.conf
+++ b/dosbox-0.74-linux.conf
@@ -77,9 +77,9 @@ scaler=normal2x
 #   cycleup: Amount of cycles to decrease/increase with keycombo.(CTRL-F11/CTRL-F12)
 # cycledown: Setting it lower than 100 will be a percentage.
 
-core=dynamic
+core=normal
 cputype=486_slow
-cycles=auto
+cycles=4000x2
 cycleup=10
 cycledown=20
 
