--- a/dosbox-0.74-win32.conf
+++ b/dosbox-0.74-win32.conf
@@ -77,8 +77,8 @@ scaler=advmame2x
 #   cycleup: Amount of cycles to decrease/increase with keycombo.(CTRL-F11/CTRL-F12)
 # cycledown: Setting it lower than 100 will be a percentage.
 
-core=dynamic
-cputype=486_slow
+core=auto
+cputype=pentium_slow
 cycles=auto
 cycleup=10
 cycledown=20
