--- a/dosbox-0.74-win32.conf
+++ b/dosbox-0.74-win32.conf
@@ -240,6 +240,6 @@ ipx=false
 # Lines in this section will be run at startup.
 # You can put your MOUNT lines here.
 
-MOUNT C "c:\Dev\chipchop2-486"
+MOUNT C "c:\Dev\visualizersdotnl\chipchop2-486"
 C:
 AUTOEXEC.BAT
